# Aqua-TTS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README.zh.md  TECHNICAL.md  TEST_REPORT.md  local_tts_infer.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
GPT_SoVITS/AR/models/: t2s_model.py
GPT_SoVITS/BigVGAN/alias_free_activation/cuda/: load.py
aqua/: __init__.py  inferencer.py  server.py  voice_registry.py
aqua/bigvgan/cuda/: __init__.py
aqua/bigvgan/torch/: filter.py
aqua/inference/: __init__.py  streaming.py
aqua/modeling/: __init__.py  t2s_streaming.py
aquatts/: __init__.py  inferencer.py  server.py  voice_registry.py
aquatts/_vendor/GPT_SoVITS/AR/models/: t2s_model.py
aquatts/bigvgan/cuda/: __init__.py  anti_alias_activation_cuda.cu
aquatts/inference/: __init__.py  presets.py
aquatts/modeling/: __init__.py  t2s_flash_attn.py  t2s_streaming.py  vocoder_graph.py
benchmarks/: README.md  _run_with_main_gptsovits.py  aqua_ttfp.py  bigvgan_raw_bench.py  spectralis_ttfp.py  t2s_comparison_bench.py  t2s_speed_bench.py
benchmarks/results/: 4070ti-super-win-py312-torch251-cu121-v3lora.md
examples/: basic_usage.py  live_talk.py  play_ete.py  streaming_inference.py
spectralis/: __init__.py  inferencer.py  server.py  voice_registry.py
spectralis/_vendor/GPT_SoVITS/AR/models/: t2s_model.py
spectralis/bigvgan/: __init__.py
spectralis/bigvgan/cuda/: __init__.py  load.py
spectralis/bigvgan/torch/: act.py  resample.py
spectralis/inference/: __init__.py  params.py  presets.py  streaming.py
spectralis/modeling/: __init__.py  t2s_streaming.py
tests/: test_bigvgan_cache.py  test_params.py  test_presets.py  test_server.py  test_streaming.py  test_vendor_paths.py  test_voice_registry.py
tools/: ttfp_test.py
