[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqua-tts"
version = "0.1.0"
description = "GPU-optimized inference wrapper for GPT-SoVITS with static KV cache and CUDA Graph acceleration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Siqi Li" },
]
keywords = ["tts", "gpt-sovits", "cuda-graph", "inference", "voice-synthesis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.23",
    "tqdm",
]

[project.optional-dependencies]
runtime = [
    "soundfile>=0.12",
    "librosa>=0.10",
    "peft>=0.7",
]
server = [
    "aqua-tts[runtime]",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
]
playback = [
    "aqua-tts[runtime]",
    "PyAudio>=0.2.14",
]
flash-attn = [
    "flash-attn>=2.5",
]

[project.urls]
Homepage = "https://github.com/Lucas1479/Aqua-TTS"
Repository = "https://github.com/Lucas1479/Aqua-TTS"

[tool.setuptools.packages.find]
include = ["aquatts*"]

[tool.setuptools.package-data]
"aquatts._vendor" = ["**/*"]
"aquatts.bigvgan.cuda" = ["*.cpp", "*.cu", "*.h"]
"aquatts.bigvgan.torch" = ["*.py"]

[tool.ruff]
extend-exclude = [
    "aquatts/_vendor/",
    "tests/test_server.py",
    "tests/test_vendor_paths.py",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
